...
        app:layout_constraintBottom_toTopOf="@+id/rcvFrameData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnHeader">

        <com.wxiwei.office.reader.OfficeDocumentView
            android:id="@+id/officeViewer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:odv_wordPageSpacing="16dp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/background_secondary"
            app:odv_pageBackground="@color/reader_viewer_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/editPanel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
...
