...
            android:text="@string/no_file_found"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateDocument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:minHeight="48dp"
        android:text="@string/create_document"
        android:textAllCaps="false"
...
